<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

        <ImageButton
                android:id="@+id/btn_dec_score_team_1"
                android:background="@drawable/button_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_minus"
                android:onClick="decreaseScore"
                android:contentDescription="@string/cd_minus_button"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:layout_centerHorizontal="true"
                  android:text="@string/team_1_name"/>

        <TextView
                android:id="@+id/tv_score_team_1"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/zero_score"/>

        <ImageButton
                android:id="@+id/btn_inc_score_team_1"
                android:background="@drawable/button_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_plus"
                android:onClick="increaseScore"
                android:contentDescription="@string/cd_plus_button"/>

    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

        <ImageButton
                android:id="@+id/btn_dec_score_team_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_minus"
                android:onClick="decreaseScore"
                android:background="@drawable/button_background"
                android:contentDescription="@string/cd_minus_button"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:layout_centerHorizontal="true"
                  android:text="@string/team_2_name"/>

        <TextView
                android:id="@+id/tv_score_team_2"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_score"/>

        <ImageButton
                android:id="@+id/btn_inc_score_team_2"
                android:layout_width="wrap_content"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="increaseScore"
                android:src="@drawable/ic_plus"
                android:contentDescription="@string/cd_plus_button"/>

    </RelativeLayout>


</LinearLayout>